# sdl2_hotreload_test

./: .gitignore  CMakeLists.txt  README.md
app/src/: game.c
core/: CMakeLists.txt
core/include/: core.h
core/src/: core.c
docs/: README.md
